--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,13 @@
     <string name="content_description">Movie Poster</string>
     <string name="sort">Sort by</string>
     <string name="settings">Settings</string>
+    <string name="share">Share</string>
     <string name="about">About</string>
 
     <string name="popularity">Popularity</string>
     <string name="rating">Rating</string>
+    <string name="favorite">Favorite</string>
 
-    <string name="popularity_key">pref_key_sort_popularity</string>
-    <string name="rating_key">pref_key_sort_rating</string>
     <string name="key">pref_key_storage_settings</string>
 
     <string name="title">%1$s</string>
